src/objects/loan__PPI_Household_Data__c.object
<CustomObject>
    <fields>
        <fullName>loan__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected client in the PPI form is not active.</errorMessage>
            <filterItems>
                <field>loan__Client__c.loan__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>PPI Household Data</relationshipLabel>
        <relationshipName>PPI_Household_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Interview_Duration__c</fullName>
        <label>Interview Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PPI_Household_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__PPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPI</label>
        <referenceTo>loan__PPI__c</referenceTo>
        <relationshipLabel>PPI Household Data</relationshipLabel>
        <relationshipName>PPI_Household_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>loan__Staff__c</referenceTo>
        <relationshipLabel>PPI Household Data</relationshipLabel>
        <relationshipName>PPI_Household_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Total_Loan_Amount__c</fullName>
        <label>Total Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Weight__c</fullName>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>PPI Household Data</label>
    <nameField>
        <displayFormat>PHDID-{0000000000}</displayFormat>
        <label>PPI Household Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Household Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>